[package]
name = "mona"
description = "Transform nested container types"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
categories = ["algorithms"]
documentation = "https://docs.rs/mona/"
repository = "https://github.com/jerry73204/mona.git"
homepage = "https://github.com/jerry73204/mona"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
